Set z-index to avoid overlap

--- a/public/sass/base/components/banner.scss
+++ b/public/sass/base/components/banner.scss
@@ -14,6 +14,7 @@ main {
     color:#fff;
     padding:10px 0;
     text-align:center;
+    z-index:1030;
 
     p, a {
         display:inline-block;
